--- a/controls.yml
+++ b/controls.yml
@@ -259,6 +259,7 @@ form:
 flag_icon:
   tag: span
   class: [flag-icon flag-icon-$country]
+  css: [/common/flag-icon-css/css/flag-icon.min.css]
   country: $id
   text: " "
 
