--- a/isearch_test.yml
+++ b/isearch_test.yml
@@ -11,11 +11,7 @@ test:
 
 
 country:
-  table: country
-  # sql: select code, name from country
-  fields: [code, name]
-  flags: [show_all]
-  adder: { access: reg, url: /isearch_test/add }
+  adder: { url: /isearch_test/add }
   drop: { max-height: 180px }
   option:
     embolden: $name ($value)
