fixed input page action processing

--- a/controls.yml
+++ b/controls.yml
@@ -392,14 +392,14 @@ input_page:
   inputs:
     - template: $layout
     - type: input
-    - $controls: { push: last}
-  controls:
-    tag: div
-    name: ""
-    label_suffix: " "
-    derive: [input_class,actions]
-    class: [actions,$input_class,^pad]
-    text: $actions
+    - controls:
+        push: last
+        tag: div
+        name: ""
+        label_suffix: " "
+        derive: [input_class,actions]
+        class: [actions,$input_class,^pad]
+        text: $actions
   actions:
     - default: { styles: [hspaced], space: 24}
     - type: submit
