--- a/isearch_test.yml
+++ b/isearch_test.yml
@@ -38,14 +38,16 @@ add:
     - add: { class: [^rounded-xlarge] }
     - close: {action: close_dialog}
   post:
-    - sql_insert: [country, code: $new_country_code, name: $new_country_name]
+    - collection.insert: [country, identifier: $new_country_code, name: $new_country_name]
     - close_dialog
-    - trigger: [isearch_add,"#country", [$new_country_code, $new_country_name] ]
+    - trigger: [added,"#country", [$new_country_code, $new_country_name] ]
 
 new_country_code:
   name: Country Code
-  valid: unique(country.code)
+  valid: not(collection(country,$value))
+  error: Country code already exists
 
 new_country_name:
   name: Country Name
-  valid: unique(country.name)
+  valid: collection_unique(country,name)
+  error: Country name already exists
