--- a/controls.yml
+++ b/controls.yml
@@ -143,7 +143,8 @@ container:
 control:
   html: <$tag>$text</$tag>
   tag: div
-  attr: { id: $id }
+  desc: ""
+  attr: { id: $id, title: $desc }
   class: [didi]
   border-color: "#ccc"
   text: $name
