--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,5 @@ Options +Indexes
 RewriteEngine on
 RewriteRule ^index.html$ index.php?path=index&content=home  [L]
 RewriteRule ^([\w\/]+)(?:<(.*))?$ index.php?path=index&content=$1&$2 [L]
-<Files ~ ".yml">
-  Require all denied
-</Files>
+RewriteRule \.(yml|conf)$ - [R=404,NC,L]
+RewriteRule ^\.git(/?|/.*)$ - [R=404,NC,L]
