--- a/fields.yml
+++ b/fields.yml
@@ -294,6 +294,14 @@ payweb:
   type: iframe
   src: /?path=paygate/request
 
+physical_address:
+  attr: { maxlength: 128 }
+  valid: [at_least(15)]
+
+physical_code:
+  attr: { min: 0000, max: 9999 }
+  valid: za_code
+
 postal_address:
   attr: { maxlength: 100 }
   valid: [at_least(15)]
@@ -302,13 +310,8 @@ postal_code:
   attr: { min: 0000, max: 9999 }
   valid: za_code
 
-physical_address:
-  attr: { maxlength: 128 }
-  valid: [at_least(15)]
-
-physical_code:
-  attr: { min: 0000, max: 9999 }
-  valid: za_code
+program:
+  name: $program_name
 
 query:
   type: button
