--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 Require all granted
 Options +Indexes
 RewriteEngine on
-RewriteRule ^index.html$ index.php?path=index&content=home  [L]
-RewriteRule ^([\w\/]+)(?:<(.*))?$ index.php?path=index&content=$1&$2 [L]
+RewriteRule ^index\.(php|html?)$ index.php [L]
+RewriteRule ^(\w+[\w\/]*)(\?.*)?$ index.php?path=$1&$2
 RewriteRule \.(yml|conf)$ - [R=404,NC,L]
 RewriteRule ^\.git(/?|/.*)$ - [R=404,NC,L]
