--- a/app-config.yml
+++ b/app-config.yml
@@ -1,13 +1,13 @@
 site_config: .site-config.yml
 brand_name: $program_name
 brand_path: ../$brand_name
+image_path: $brand_path/images
 landing:
   page: /index
 authenticated:
   page: /index
   path: /home
   content: $path
-start_page: home
 log_dir: ../log
 log_file: $brand_name.log
 upload_dir: ../uploads
@@ -23,6 +23,7 @@ scripts:
   - /common/page.js
 helpers:
   - collection
+search_paths: [../common/,.,$brand_path]
 
 email_otp: yes
 sms_otp: yes
