--- a/app-config.yml
+++ b/app-config.yml
@@ -4,6 +4,8 @@ brand_path: ../$brand_name
 image_path: $brand_path/images
 landing:
   page: /index
+  path: /home
+  content: $path
 authenticated:
   page: /index
   path: /home
