include wizard on password changer and user yml

--- a/password_changer.yml
+++ b/password_changer.yml
@@ -1,7 +1,8 @@
 ## YAML Template.
 ---
+include: [wizard]
 begin:
-  type: wizard_page
+  type: input_page
   desc: |
     The system is going to send you a One Time Pin (OTP) to verify that you are
     not a robot. Please enter this OTP in the following screen to start changing
