allow overriding/appending to default bookmark state styles

--- a/wizard.yml
+++ b/wizard.yml
@@ -9,7 +9,7 @@ wizard:
   bookmarks:
     type: container
     class: [wizard-bookmarks]
-    state_styles: {pending: "", active: "", done: "", visited: "",committed: ""}
+    state_styles: {pending: [disabled], active: "", done: "", visited: "",committed: [disabled]}
     derive: [bookmark,steps,parent_path]
     contents:
       - type: $bookmark
