allow customization of wizard navigataion bar

--- a/wizard.yml
+++ b/wizard.yml
@@ -39,6 +39,7 @@ wizard:
   steps: []
   prev:
     type: button
+    show: no
     name: Previous
     desc: Go to previous step
     action: trigger
@@ -46,10 +47,18 @@ wizard:
     class: [wizard-prev]
   next:
     type: submit
+    show: no
     name: Next
     desc: Go to next step
-    class: [action,wizard-next]
-  navigate: [$prev,$next]
+    class: [wizard-next]
+  navigation:
+    type: container
+    class: [wizard-navigation]
+    derive: [navigate,parent_path,prev,next]
+    contents: [merge: navigate]
+  navigate:
+    - $prev
+    - $next
 
 
 wizard_jump:
