--- a/validators.yml
+++ b/validators.yml
@@ -35,7 +35,7 @@ blank:
   error: $name must be blank
 
 collection:
-  valid: sql(select 1 from collection where collection='$1' and identifier='$2')
+  valid: collection.exists($1,$2)
 
 collection_filter:
   4: ""
