--- a/app-config.yml
+++ b/app-config.yml
@@ -28,6 +28,7 @@ search_paths: [../common/,.,$brand_path]
 collections:
   default: collection
   session: [session,audit_trail]
+  user: [user,partner]
 
 email_otp: yes
 sms_otp: yes
