--- a/user.yml
+++ b/user.yml
@@ -86,11 +86,21 @@ confirm_registration:
   post:
     - read_session: title,first_name,last_name,cellphone,email,password
     - collection.insert: [user, $email, password: /password('$password'), active: 1, attempts: 0, roles: 'reg', title, first_name,last_name,cellphone]
+    - let: { registrant: $first_name $last_name<$email> }
+    - clear_values: [first_name, last_name, email]
+    - foreach:
+        - collection.data: [user, role: $registrar_role, first_name, last_name, email]
+        - if $email_new_registration:
+            send_email: { type: new_registration_email }
+        - clear_values: [first_name, last_name, email]
     - clear_values
   audit: $title $first_name $last_name $cellphone $email
 
-
-
+new_registration_email:
+  subject: New Registration on $prpgram_name
+  from: $registrant
+  to: $first_name $last_name<$email>
+  message: New user registration on $program_name from $first_name $last_name
 
 create:
   type: labelled_input_page
